--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,15 +3,27 @@ layout: default
 ---
 
 <article class="post">
-  <h1>{{ page.title }}</h1>
+  <h1>{{ page.title }}</h1> 
+
+  <div class="date">
+    {{ page.date | date: "%B %e, %Y" }}
+  </div>
 
   <div class="entry">
     {{ content }}
   </div>
 
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
-  </div>
-
+  {% if page.notes %}
+    <div class="notes">
+      <h3>De la alții</h3>
+      
+      {% for note in page.notes %}
+      <div class="note">
+        {{note.content}}
+      </div>
+      {% endfor %}
+    </div>
+  {% endif %}
+  
   {% include disqus.html %}
 </article>
