--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
+    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.title }} – {{ site.description }}</title>
 
     {% include meta.html %}
 
@@ -32,7 +32,9 @@
         </header>
       </div>
     </div>
-
+    <div>
+        {{site.name}}
+    </div>
     <div id="main" role="main" class="container">
       {{ content }}
     </div>
