added tags; new article cod procedura penala

--- a/style.scss
+++ b/style.scss
@@ -262,6 +262,11 @@ nav {
     font-style: italic;
   }
 
+  .tags
+  {
+    float:right;
+    font-size: 80%;
+  }
   .notes > .note
   {
     margin:10px 0 10px 0
