--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,15 @@ layout: default
 <article class="post">
   <h1>{{ page.title }}</h1> 
 
+  <div class="tags">
+      {% for tag in page.tags %}
+        <span>#{{tag | strip}}</span>
+      {% endfor %}
+
+    </div>
+
+    
+
   <div class="date">
     {{ page.date | date: "%B %e, %Y" }}
   </div>
