--- a/style.scss
+++ b/style.scss
@@ -279,6 +279,24 @@ nav {
     text-transform: uppercase;
     font-size: 15px;
   }
+  .navigation 
+  {
+    margin: auto;
+    width: auto;
+    display: block;
+    text-align: center;
+  }
+  .navigation > a
+  {
+    margin:0 10px 0 10px;
+  }
+}
+
+a.not-active {
+  pointer-events: none;
+  cursor: default;
+  text-decoration: none;
+  color: inherit;
 }
 
 .wrapper-footer {
