--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,12 +1,10 @@
----
----
-
 //
 // IMPORTS
 //
 
 @import "reset";
 @import "variables";
+
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
@@ -18,7 +16,7 @@ html {
 }
 
 body {
-	background: $white;
+  background: $white;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
@@ -30,7 +28,12 @@ body {
   width: 100%;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: $helveticaNeue;
   color: $darkerGray;
   font-weight: bold;
@@ -71,13 +74,15 @@ p {
 a {
   color: $blue;
   text-decoration: none;
-	cursor: pointer;
-  &:hover, &:active {
+  cursor: pointer;
+  &:hover,
+  &:active {
     color: $blue;
   }
 }
 
-ul, ol {
+ul,
+ol {
   margin: 15px 0;
   padding-left: 30px;
 }
@@ -90,19 +95,25 @@ ol {
   list-style-type: decimal;
 }
 
-ol ul, ul ol, ul ul, ol ol {
+ol ul,
+ul ol,
+ul ul,
+ol ol {
   margin: 0;
 }
 
-ul ul, ol ul {
+ul ul,
+ol ul {
   list-style-type: circle;
 }
 
-em, i {
+em,
+i {
   font-style: italic;
 }
 
-strong, b {
+strong,
+b {
   font-weight: bold;
 }
 
@@ -134,12 +145,12 @@ img {
 // http://nicolasgallagher.com/micro-clearfix-hack/
 .clearfix:before,
 .clearfix:after {
-    content: " ";
-    display: table;
+  content: " ";
+  display: table;
 }
 
 .clearfix:after {
-    clear: both;
+  clear: both;
 }
 
 /*********************/
@@ -212,8 +223,8 @@ img {
 
 nav {
   float: right;
-  margin-top: 10px; 
-  margin-bottom: 10px; 
+  margin-top: 10px;
+  margin-bottom: 10px;
   font-family: $helveticaNeue;
   font-size: 18px;
 
@@ -254,7 +265,7 @@ nav {
 
 .post {
   blockquote {
-    margin: 1.8em .8em;
+    margin: 1.8em 0.8em;
     border-left: 2px solid $gray;
     padding: 0.1em 1em;
     color: $gray;
@@ -262,14 +273,12 @@ nav {
     font-style: italic;
   }
 
-  .tags
-  {
-    float:right;
+  .tags {
+    float: right;
     font-size: 80%;
   }
-  .notes > .note
-  {
-    margin:10px 0 10px 0
+  .notes > .note {
+    margin: 10px 0 10px 0;
   }
   .comments {
     margin-top: 10px;
@@ -279,16 +288,14 @@ nav {
     text-transform: uppercase;
     font-size: 15px;
   }
-  .navigation 
-  {
-    margin: auto;
+  .navigation {
+    margin: 3rem auto 3rem auto;
     width: auto;
     display: block;
     text-align: center;
   }
-  .navigation > a
-  {
-    margin:0 10px 0 10px;
+  .navigation > a {
+    margin: 0 10px 0 10px;
   }
 }
 
